--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
   "devDependencies": {
     "@prettier/plugin-xml": "^3.4.1",
-    "prettier": "^3.3.0"
-  }
+    "gulp": "^5.0.0",
+    "gulp-pug": "^5.0.0",
+    "gulp-rename": "^2.0.0",
+    "prettier": "^3.3.0",
+    "pug": "^3.0.3"
+  },
+  "name": "lsv-logo",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
